--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "start": "nodemon  src/index.ts",
     "test": "test",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "lint": "eslint . --ext .ts",
+    "generate-json-schema:User": "npm-run-all generate-json-schema:IUser generate-json-schema:PartialUser",
+    "generate-json-schema:IUser": "ts-json-schema-generator --no-type-check --path src/models/IUser.ts -t UserToValidate > src/schemas/IUser.json",
+    "generate-json-schema:PartialUser": "ts-json-schema-generator --no-type-check --path src/models/IUser.ts -t PartialUser > src/schemas/PartialUser.json"
   },
   "repository": {
     "type": "git",
@@ -19,13 +23,23 @@
   },
   "homepage": "https://github.com/litwin90/NodeMentoringProgram-2#readme",
   "devDependencies": {
+    "@types/ajv": "^1.0.0",
+    "@types/ajv-merge-patch": "^4.1.0",
     "@types/express": "^4.17.7",
+    "@types/uuid": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
+    "eslint": "^7.7.0",
     "nodemon": "^2.0.4",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
+    "ts-json-schema-generator": "^0.72.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "ajv": "^6.12.4",
+    "express": "^4.17.1",
+    "uuid": "^8.3.0"
   }
 }
