--- a/package.json
+++ b/package.json
@@ -1,31 +1,55 @@
 {
-  "name": "nodementoringprogram-2",
-  "version": "1.0.0",
-  "description": "NMP-2",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon  src/index.ts",
-    "test": "test",
-    "tsc": "tsc"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/litwin90/NodeMentoringProgram-2.git"
-  },
-  "author": "Dzianis Davydau",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/litwin90/NodeMentoringProgram-2/issues"
-  },
-  "homepage": "https://github.com/litwin90/NodeMentoringProgram-2#readme",
-  "devDependencies": {
-    "@types/express": "^4.17.7",
-    "nodemon": "^2.0.4",
-    "prettier": "^2.0.5",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.2"
-  },
-  "dependencies": {
-    "express": "^4.17.1"
-  }
+    "name": "nodementoringprogram-2",
+    "version": "1.0.0",
+    "description": "NMP-2",
+    "main": "index.js",
+    "scripts": {
+        "start": "nodemon  src/app.ts",
+        "init-users": "nodemon scripts/init-users.ts",
+        "test": "test",
+        "tsc": "tsc",
+        "lint": "eslint . --ext .ts",
+        "generate-json-schema:User": "npm-run-all generate-json-schema:UpdateActionUser generate-json-schema:CreateActionUser",
+        "generate-json-schema:UpdateActionUser": "ts-json-schema-generator --no-type-check --path src/interfaces/IUser.ts -t UpdateActionUser > src/schemas/UpdateActionUser.json",
+        "generate-json-schema:CreateActionUser": "ts-json-schema-generator --no-type-check --path src/interfaces/IUser.ts -t CreateActionUser > src/schemas/CreateActionUser.json"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/litwin90/NodeMentoringProgram-2.git"
+    },
+    "author": "Dzianis Davydau",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/litwin90/NodeMentoringProgram-2/issues"
+    },
+    "homepage": "https://github.com/litwin90/NodeMentoringProgram-2#readme",
+    "devDependencies": {
+        "@types/ajv": "^1.0.0",
+        "@types/ajv-merge-patch": "^4.1.0",
+        "@types/express": "^4.17.7",
+        "@types/node": "^14.10.1",
+        "@types/pg": "^7.14.4",
+        "@types/sequelize": "^4.28.9",
+        "@types/uuid": "^8.3.0",
+        "@typescript-eslint/eslint-plugin": "^3.10.1",
+        "@typescript-eslint/parser": "^3.10.1",
+        "eslint": "^7.7.0",
+        "eslint-config-prettier": "^6.11.0",
+        "eslint-plugin-prettier": "^3.1.4",
+        "nodemon": "^2.0.4",
+        "npm-run-all": "^4.1.5",
+        "prettier": "^2.0.5",
+        "ts-json-schema-generator": "^0.72.1",
+        "ts-node": "^9.0.0",
+        "typescript": "^4.0.2"
+    },
+    "dependencies": {
+        "ajv": "^6.12.4",
+        "express": "^4.17.1",
+        "pg": "^8.3.3",
+        "reflect-metadata": "^0.1.13",
+        "sequelize": "^6.3.5",
+        "typedi": "^0.8.0",
+        "uuid": "^8.3.0"
+    }
 }
