--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,9 @@
         "strictNullChecks": true,
         "outDir": "dist/",
         "lib": ["dom", "es6", "es2016.array.include", "es2017"],
-        "typeRoots": [ "./typings", "./node_modules/@types"],
+        "typeRoots": ["./typings", "./node_modules/@types"],
+        "resolveJsonModule": true,
+        "esModuleInterop": true
     },
     "exclude": ["node_modules"],
     "compileOnSave": false,
