feat: implemented  HomeTask3
3.1
- Installed PostgreSQL on local machine
- implemente script to forse create Users table (npm run init-users)
- api configured ro use Sequileze ORM
3.2
-service adhered to 3-layer architecture

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,12 @@
             "type": "node-terminal"
         },
         {
+            "command": "npm run init-users",
+            "name": "Init users",
+            "request": "launch",
+            "type": "node-terminal"
+        },
+        {
             "name": "Attach to Process",
             "type": "node",
             "request": "attach",
