--- a/.eslintrc
+++ b/.eslintrc
@@ -8,25 +8,18 @@
         "jest": true
     },
     "parser": "@typescript-eslint/parser",
-    "plugins": [
-      "@typescript-eslint"
-    ],
+    "plugins": ["@typescript-eslint", "prettier"],
     "extends": [
-      "eslint:recommended",
-      "plugin:@typescript-eslint/eslint-recommended",
-      "plugin:@typescript-eslint/recommended"
+        "eslint:recommended",
+        "plugin:@typescript-eslint/eslint-recommended",
+        "plugin:@typescript-eslint/recommended",
+        "prettier"
     ],
     "rules": {
         "no-debugger": 1,
         // Possible errors
-        "comma-dangle": [
-            2,
-            "always-multiline"
-        ],
-        "no-cond-assign": [
-            2,
-            "always"
-        ],
+        "comma-dangle": [2, "always-multiline"],
+        "no-cond-assign": [2, "always"],
         "no-constant-condition": 2,
         "no-control-regex": 2,
         "no-dupe-args": 2,
@@ -35,10 +28,7 @@
         "no-empty-character-class": 2,
         "no-empty": 2,
         "no-extra-boolean-cast": 0,
-        "no-extra-parens": [
-            2,
-            "functions"
-        ],
+        "no-extra-parens": [2, "functions"],
         "no-extra-semi": 2,
         "no-func-assign": 2,
         "no-inner-declarations": 2,
@@ -54,14 +44,8 @@
         "no-unexpected-multiline": 0,
         // Best Practices
         "block-scoped-var": 2,
-        "complexity": [
-            2,
-            50
-        ],
-        "curly": [
-            2,
-            "multi-line"
-        ],
+        "complexity": [2, 50],
+        "curly": [2, "multi-line"],
         "default-case": 2,
         "dot-notation": [
             2,
@@ -110,10 +94,7 @@
         "no-useless-call": 2,
         "no-with": 2,
         "radix": 2,
-        "wrap-iife": [
-            2,
-            "outside"
-        ],
+        "wrap-iife": [2, "outside"],
         "yoda": 2,
         // ES2015
         "arrow-parens": 0,
@@ -129,19 +110,13 @@
         "no-const-assign": 2,
         "no-this-before-super": 0,
         "no-var": 2,
-        "object-shorthand": [
-            2,
-            "always"
-        ],
+        "object-shorthand": [2, "always"],
         "prefer-arrow-callback": 2,
         "prefer-const": 2,
         "prefer-spread": 2,
         "prefer-template": 2,
         // Strict Mode
-        "strict": [
-            2,
-            "never"
-        ],
+        "strict": [2, "never"],
         // Variables
         "no-catch-shadow": 2,
         "no-delete-var": 2,
@@ -169,10 +144,7 @@
             }
         ],
         "newline-after-var": 0,
-        "brace-style": [
-            2,
-            "1tbs"
-        ],
+        "brace-style": [2, "1tbs"],
         "comma-spacing": [
             2,
             {
@@ -180,14 +152,8 @@
                 "after": true
             }
         ],
-        "comma-style": [
-            2,
-            "last"
-        ],
-        "computed-property-spacing": [
-            2,
-            "never"
-        ],
+        "comma-style": [2, "last"],
+        "computed-property-spacing": [2, "never"],
         "eol-last": 2,
         "func-names": 1,
         "func-style": [
@@ -214,10 +180,7 @@
                 "ignoreComments": false
             }
         ],
-        "max-nested-callbacks": [
-            2,
-            4
-        ],
+        "max-nested-callbacks": [2, 4],
         "new-parens": 2,
         "no-array-constructor": 2,
         "no-lonely-if": 2,
@@ -234,23 +197,10 @@
         "no-spaced-func": 2,
         "no-trailing-spaces": 2,
         "no-unneeded-ternary": 2,
-        "object-curly-spacing": [
-            2,
-            "always"
-        ],
-        "one-var": [
-            2,
-            "never"
-        ],
-        "padded-blocks": [
-            2,
-            "never"
-        ],
-        "quotes": [
-            1,
-            "single",
-            "avoid-escape"
-        ],
+        "object-curly-spacing": [2, "always"],
+        "one-var": [2, "never"],
+        "padded-blocks": [2, "never"],
+        "quotes": [1, "single", "avoid-escape"],
         "semi-spacing": [
             2,
             {
@@ -258,10 +208,7 @@
                 "after": true
             }
         ],
-        "semi": [
-            2,
-            "always"
-        ],
+        "semi": [2, "always"],
         "keyword-spacing": 2,
         "space-before-blocks": 2,
         "space-before-function-paren": [
@@ -271,10 +218,7 @@
                 "named": "never"
             }
         ],
-        "space-in-parens": [
-            2,
-            "never"
-        ],
+        "space-in-parens": [2, "never"],
         "space-infix-ops": 2,
         "space-unary-ops": [
             2,
@@ -287,26 +231,13 @@
             2,
             "always",
             {
-                "exceptions": [
-                    "-",
-                    "+"
-                ],
-                "markers": [
-                    "=",
-                    "!"
-                ]
+                "exceptions": ["-", "+"],
+                "markers": ["=", "!"]
             }
         ],
-
         // Legacy
-        "max-depth": [
-            0,
-            4
-        ],
-        "max-params": [
-            2,
-            7
-        ],
+        "max-depth": [0, 4],
+        "max-params": [2, 7],
         "no-bitwise": 2
     },
     "globals": {
