--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "typescript": "^4.0.2"
     },
     "dependencies": {
+        "@types/winston": "^2.4.4",
         "ajv": "^6.12.4",
         "cls-hooked": "^4.2.2",
         "express": "^4.17.1",
@@ -56,6 +57,7 @@
         "reflect-metadata": "^0.1.13",
         "sequelize": "^6.3.5",
         "typedi": "^0.8.0",
-        "uuid": "^8.3.0"
+        "uuid": "^8.3.0",
+        "winston": "^3.3.3"
     }
 }
