--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
         "@types/ajv": "^1.0.0",
         "@types/ajv-merge-patch": "^4.1.0",
         "@types/cls-hooked": "^4.3.1",
+        "@types/cors": "^2.8.8",
         "@types/express": "^4.17.7",
+        "@types/jsonwebtoken": "^8.5.0",
         "@types/node": "^14.10.1",
         "@types/pg": "^7.14.4",
         "@types/sequelize": "^4.28.9",
@@ -49,10 +51,15 @@
         "typescript": "^4.0.2"
     },
     "dependencies": {
+        "@types/moment": "^2.13.0",
+        "@types/nodemon": "^1.19.0",
         "@types/winston": "^2.4.4",
         "ajv": "^6.12.4",
         "cls-hooked": "^4.2.2",
+        "cors": "^2.8.5",
         "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
+        "moment": "^2.29.1",
         "pg": "^8.3.3",
         "reflect-metadata": "^0.1.13",
         "sequelize": "^6.3.5",
