--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,12 @@
     "version": "0.0.0",
     "configurations": [
         {
+            "command": "npm run test",
+            "name": "Test Jest",
+            "request": "launch",
+            "type": "node-terminal"
+        },
+        {
             "command": "npm start",
             "name": "Run npm start",
             "request": "launch",
