--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start": "nodemon  src/app.ts",
         "generate-initial-data": "nodemon scripts/generate-initial-data.ts",
-        "test": "test",
+        "test": "jest --runInBand  --verbose",
         "tsc": "tsc",
         "lint": "eslint . --ext .ts",
         "generate-json-schema:All": "npm-run-all generate-json-schema:User generate-json-schema:Group",
@@ -32,28 +32,33 @@
         "@types/ajv-merge-patch": "^4.1.0",
         "@types/cls-hooked": "^4.3.1",
         "@types/cors": "^2.8.8",
+        "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.7",
+        "@types/jest": "^26.0.15",
         "@types/jsonwebtoken": "^8.5.0",
+        "@types/moment": "^2.13.0",
         "@types/node": "^14.10.1",
+        "@types/nodemon": "^1.19.0",
         "@types/pg": "^7.14.4",
         "@types/sequelize": "^4.28.9",
         "@types/uuid": "^8.3.0",
+        "@types/winston": "^2.4.4",
         "@typescript-eslint/eslint-plugin": "^3.10.1",
         "@typescript-eslint/parser": "^3.10.1",
+        "dotenv": "^8.2.0",
         "eslint": "^7.7.0",
         "eslint-config-prettier": "^6.11.0",
         "eslint-plugin-prettier": "^3.1.4",
+        "jest": "^26.6.1",
         "nodemon": "^2.0.4",
         "npm-run-all": "^4.1.5",
         "prettier": "^2.0.5",
+        "ts-jest": "^26.4.3",
         "ts-json-schema-generator": "^0.72.1",
         "ts-node": "^9.0.0",
-        "typescript": "^4.0.2"
+        "typescript": "^4.0.5"
     },
     "dependencies": {
-        "@types/moment": "^2.13.0",
-        "@types/nodemon": "^1.19.0",
-        "@types/winston": "^2.4.4",
         "ajv": "^6.12.4",
         "cls-hooked": "^4.2.2",
         "cors": "^2.8.5",
